--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
  <title>Juliane de Souza</title>
+ <script>
+alert("Olá mundo");
+console.log("Olá mundo");
+ </script>
  </head>
  <body>
  <h1>Primeira aula do curso de node!</h1>
